cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesadditional-invalid-pattern-operator.yaml/results.txt
Configuration is invalid - found 2 configuration error(s), and 0 rule(s).
semgrep error: Invalid rule schema
  --> rules/invalid-rules/additional-invalid-pattern-operator.yaml:4
4 |     pattern: foo
  |     ^

Expected exactly one key of `pattern`, `all`, `any`, `regex`, `not`, or `inside`

[ERROR] Rule parse error in rule eqeq:
 Expected exactly one key of `pattern`, `all`, `any`, `regex`, `not`, or `inside`
